--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
-/* Global Layout Set-up */
-* {
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -8,147 +9,153 @@ body {
   padding: 0;
   text-align: center;
   font-family: 'Open Sans', sans-serif;
-  color: #3A6355;
+  color: #D9E7E3;
   background: #2d2b30;
 }
 
-/* Link Styles */
-
 a {
   text-decoration: none;
-  color: #999;
+  color: #72F060;
 }
 
 a:hover {
-  color: #999;
+  color: #72F060;
+  text-decoration: underline;
 }
 
-/* Section Styles */
 
+
+/*****************************
+  Navigation
+*****************************/
 .main-nav {
-  width: 100%;
-  background: rgba(45, 43, 48, 0.8);
+  background: rgba(45, 43, 48, .9);
   min-height: 30px;
   padding: 10px;
-  position: fixed;
   text-align: center;
+  border-bottom: 5px solid green;
 }
 
-.nav {
-  display: flex;
-  justify-content: space-around;
+.main-nav ul {
   font-weight: 700;
   list-style-type: none;
   margin: 0 auto;
   padding: 0;
 }
 
-.nav .name {
+.main-nav li {
+  margin: 10px auto;
+  padding: 5px 12px 10px 12px;
+}
+
+.main-nav ul a {
   display: block;
-  margin-right: auto;
-  color: white;
-  letter-spacing: 5px;
+  padding: 10px;
+  border: 1px solid white;
+  border-radius: 10px;
+  text-transform: uppercase;
 }
 
-.nav li {
-  padding: 5px 10px 10px 10px;
+.main-nav a:hover {
+  background: #72F060;
+  border-color: #72F060;
+  color: #000;
+  cursor: pointer;
+  text-decoration: none;
 }
 
-.nav a {
-  transition: all .5s;
-}
 
-.nav a:hover {
-  color: white
-}
 
-header {
+/*****************************
+  Header
+*****************************/
+.main-header {
   text-align: center;
-  background: url('../img/concert02_with_text.jpg') no-repeat top center ;
+  background: url('../img/concert02_no_text.jpg') no-repeat top center ;
   background-size: cover;
   overflow: hidden;
-  padding-top: 60px;
   height: 350px;
+  color: #000;
+  text-transform: uppercase;
 }
 
-.tag {
-  color: black;
-  padding: 10px;
-  letter-spacing: 5px;
-}
-
-.name{
-  font-weight: 300;
-}
-
-header .name{
+.main-header h1 {
   font-size: 3em;
 }
-.tagline {
-  font-weight: 600;
-  padding: 20px;
-  text-transform: uppercase;
-  color: #781125
-}
 
-.card {
-  margin: 30px;
-  padding: 20px 40px 40px;
-  text-align: left;
-  border-top: 4px solid #781125;
-  clear: both;
-}
-.card:hover {
-  border-color: #96731A;
+.main-header p {
+  font-weight: bold;
+  font-size: 1.6em;
 }
 
 
-.photo{
-  display: block;
-  width: 200px;
-  height: 0%;
+
+/*****************************
+  Page: index.html
+*****************************/
+.main-section {
+  margin: 30px 15px 10px;
+}
+
+.band-info {
+  margin-top: 40px;
+  padding-top: 15px;
+  border-top: 4px solid #72F060;
+}
+
+.album-img img,
+.band-img img {
   margin: 0 auto;
-}
-
-.information{
   width: 100%;
-  text-align: center;
-  /*display: inline-block;
-  position: absolute;*/
 }
 
-.heading{
+.information {
+  text-align: center;
+}
+
+.information h2 {
   font-size: 2em;
   text-transform: uppercase;
-  color: #781125;
+  color: #72F060;
   margin-top: 10px;
 }
 
-/* Footer styles */
-
-footer {
-  width: 100%;
-  min-height: 30px;
-  padding: 20px 0 40px 20px;
+.btn-buy {
+  padding: 10px;
+  border: 1px solid white;
+  border-radius: 10px;
 }
 
-footer .copyright {
-  top: -8px;
-  font-size: .75em;
+.btn-buy:hover {
+  background: #72F060;
+  border-color: #72F060;
+  color: #000;
+  cursor: pointer;
+  text-decoration: none;
 }
 
-footer ul {
+/*****************************
+  Footer
+*****************************/
+.main-footer {
+  margin-top: 40px;
+  padding-top: 20px;
+  border-top: 4px solid #72F060;
+}
+
+.main-footer ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-footer ul li {
+.main-footer li {
   display: inline-block;
 }
 
-a.social {
+.main-footer a.social {
   display: inline-block;
+  text-indent: -20000px;
   margin-left: 5px;
   width: 30px;
   height: 30px;
@@ -157,72 +164,103 @@ a.social {
   transition: all .5s;
 }
 
-a.twitter {
+.main-footer a.twitter {
   background-image: url(../img/twitter-32.png);
 }
 
-a.youtube {
+.main-footer a.youtube {
   background-image: url(../img/youtube-32.png);
 }
 
-a.spotify {
+.main-footer a.spotify {
   background-image: url(../img/spotify-32.png);
 }
 
-a.social:hover {
+.main-footer a.social:hover {
   opacity: 1;
 }
-.clearfix {
-  clear: both;
+
+.main-footer .copyright {
+  font-size: .75em;
 }
 
-/* Styles for larger screens */
-@media screen and (min-width: 840px) {
 
-  .flex {
-    display: -ms-flexbox;      /* TWEENER - IE 10 */
+
+/*****************************
+  Media Queries
+*****************************/
+@media screen and (min-width: 768px) {
+  /*****************************
+    Global Layout Set-up
+  *****************************/
+  .clearfix:before,
+  .clearfix:after {
+      content: " "; /* 1 */
+      display: table; /* 2 */
+  }
+
+  .clearfix:after {
+      clear: both;
+  }
+  /*****************************
+    Navigation
+  *****************************/
+  .main-nav ul {
     display: flex;
-    max-width: 1200px;
-    -ms-flex-pack: distribute;
   }
 
-  header {
+  .main-nav li {
+    margin: 10px 0px;
+  }
+
+  .main-nav li:nth-child(2) {
+    margin-left: auto;
+  }
+
+  .main-nav ul a {
+    display: initial;
+    font-size: 1.2em;
+  }
+
+  /*****************************
+    Header
+  *****************************/
+  .main-header {
     min-height: 470px;
+    padding-top: 50px;
   }
 
-  .nav {
-    max-width: 1200px;
-    padding: 0 30px;
+  .main-header h1 {
+    font-size: 3.4em;
   }
 
-
-  main {
-    padding-top: 20px;
+  .main-header p {
+    font-size: 2em;
   }
 
-  main p {
-    line-height: 1.6em;
+  /*****************************
+    Page: index.html
+  *****************************/
+  .main-section {
+    max-width: 1024px;
+    margin: 20px auto;
+    padding: 20px 40px;
   }
 
-  .card{
-    margin: 40px auto;
-    padding: 20px 40px 40px;
+  .album-img,
+  .band-img {
+    float: left;
+    width: 40%;
+  }
+
+  .band-info .information {
+    float: left;
+    width: 60%;
+  }
+
+  .btn-buy {
+    display: block;
     width: 80%;
-    max-width: 1000px;
-  }
-
-  .photo{
-    width: 30%;
-    margin: 20px 30px;
-  }
-
-  .information{
-    text-align: left;
-  }
-
-  footer {
-    font-size: 1.3em;
-    max-width: 1200px;
-    margin: 40px auto;
+    margin: 80px auto 0px;
   }
 }
